[Photography] Fixed layout issue with grid

--- a/_sass/photography.scss
+++ b/_sass/photography.scss
@@ -1,7 +1,7 @@
 .photography {
   &-grid {
     margin: auto;
-    width: 2900px !important;
+    width: 3100px !important;
     margin-bottom: 8px !important;
 
     &-container {
